[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/Planos de Fundo/Frame-Card.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Planos de Fundo/Fundo-Cinza.jpg" type="Texture" id=2]
[ext_resource path="res://Recursos/Sprites/NPCs/@whiteM-metade1.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Poderes/Juridico/Botões Jurídico/Pergunta1.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1064.75, 375.25 )
scale = Vector2( 0.32656, 0.348698 )
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 538.0
margin_top = 30.0
margin_right = 1940.0
margin_bottom = 789.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DadosJogador" type="Button" parent="."]
margin_left = 150.0
margin_top = 407.0
margin_right = 475.0
margin_bottom = 503.0
text = "Dados do Jogador"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DadosMinigame" type="Button" parent="."]
margin_left = 150.0
margin_top = 190.0
margin_right = 475.0
margin_bottom = 285.0
text = "Dados do Minigame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DadosDebate" type="Button" parent="."]
margin_left = 150.0
margin_top = 297.0
margin_right = 475.0
margin_bottom = 395.0
text = "Dados do Debate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 35.0
margin_top = 620.0
margin_right = 215.0
margin_bottom = 690.0
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DadosJogador" to="." method="_on_DadosJogador_pressed"]
[connection signal="pressed" from="DadosMinigame" to="." method="_on_DadosMinigame_pressed"]
[connection signal="pressed" from="DadosDebate" to="." method="_on_DadosDebate_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
